--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="js/main.js"></script>
+    <link rel="shortcut icon" href="https://4.bp.blogspot.com/-fJIzyN04hQM/WA4zISjOVEI/AAAAAAAABcA/3a9zZn98YsQf8_StdPwJlZDJNewMfka_QCK4B/s1600/conjunto-frutas.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
     <title>Fruta random</title>
 </head>
@@ -19,5 +18,6 @@
         </div>
         <input id="ident" type="button" value="Elije una fruta">
     </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
